math-core/src/snapshots/math_core__tests__sqrt_log_braces.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt{\\log}"
---
<math>
    <msqrt>
        <mo lspace="0" rspace="0">log</mo>
    </msqrt>
</math>
