math-core/src/snapshots/math_core__tests__sqrt_sum.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt\\sum"
---
<math>
    <msqrt>
        <mo>∑</mo>
    </msqrt>
</math>
