math-core/src/snapshots/math_core__tests__sqrt_unknown_cmd.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[3]\\asdf 3"
---
Position: 8
UnknownCommand(
    "asdf",
)
