math-core/src/snapshots/math_core__tests__square_root.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt 2"
---
<math>
    <msqrt>
        <mn>2</mn>
    </msqrt>
</math>
