math-core/src/snapshots/math_core__tests__square_root_with_space.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt 12"
---
<math>
    <msqrt>
        <mn>1</mn>
    </msqrt>
    <mn>2</mn>
</math>
