math-core/src/snapshots/math_core__tests__square_root_without_space.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt12"
---
<math>
    <msqrt>
        <mn>1</mn>
    </msqrt>
    <mn>2</mn>
</math>
