math-core/src/snapshots/math_core__tests__standalone_superscript.snap
---
source: math-core/src/lib.rs
expression: ^2F_3
---
<math>
    <msub>
        <mmultiscripts>
            <mi>F</mi>
            <mprescripts/>
            <mrow></mrow>
            <mn>2</mn>
        </mmultiscripts>
        <mn>3</mn>
    </msub>
</math>
