math-core/src/snapshots/math_core__tests__standalone_underscore.snap
---
source: math-core/src/lib.rs
expression: _2F_3
---
<math>
    <msub>
        <mmultiscripts>
            <mi>F</mi>
            <mprescripts/>
            <mn>2</mn>
            <mrow></mrow>
        </mmultiscripts>
        <mn>3</mn>
    </msub>
</math>
