math-core/src/snapshots/math_core__tests__stretchy_one-sided_parenthesis.snap
---
source: math-core/src/lib.rs
expression: "\\left( x \\right."
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo></mo>
    </mrow>
</math>
