math-core/src/snapshots/math_core__tests__stretchy_parentheses.snap
---
source: math-core/src/lib.rs
expression: "\\left( x \\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo>)</mo>
    </mrow>
</math>
